[package]
name = "lust"
version = "1.3.3"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"
documentation = "getting-started.md"
readme = "README.md"
license = "MIT"
keywords = ["image", "image-server"]
include = ["src/**/*", "Cargo.toml"]
description = "A fast, auto-optimising image server designed for multiple backends with throughput and latency in mind."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webp = { version = "*", path = "./webp" }
image = "0.23"

base64 = "0.13.0"
bytes = "1"

anyhow = "1"
clap = "2"
serde_json = "1"
serde_variant = "0.1.0"
async-trait = "0.1.50"
once_cell = "1.7.2"
concread = "0.2.14"
futures = "0.3"

log = "0.4.14"
simple_logger = "1.11.0"

gotham = "0.6.0"
gotham_derive = "0.6.0"
headers = "0.3"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
hashbrown = { version = "0.11.2", features = ["serde"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "mysql", "sqlite", "postgres", "chrono", "uuid" ] }
redis = { version = "0.20", features = ["tokio-comp", "connection-manager"] }
scylla = "0.2.1"

[profile.release]
lto = "fat"
codegen-units = 1
