[package]
name = "lust"
version = "2.0.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2021"
documentation = "getting-started.md"
readme = "README.md"
license = "MIT"
keywords = ["image", "image-server"]
include = ["src/**/*", "Cargo.toml"]
description = "A fast, auto-optimising image server designed for multiple backends with throughput and latency in mind."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webp = { version = "*", path = "./webp" }
image = "0.24.1"

base64 = "0.13.0"
bytes = "1"

anyhow = "1"
clap = "3"
serde_json = "1"
async-trait = "0.1"
once_cell = "1.10.0"
futures = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
