[package]
name = "lust"
version = "2.0.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2021"
documentation = "getting-started.md"
readme = "README.md"
license = "MIT"
keywords = ["image", "image-server"]
include = ["src/**/*", "Cargo.toml"]
description = "A fast, auto-optimising image server designed for multiple backends with throughput and latency in mind."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webp = { version = "*", path = "./webp" }

tokio = { version = "1", features = ["full"] }
poem-openapi = { version = "1.3", features = ["redoc", "uuid", "url"] }
poem = { version = "1.2", features = ["anyhow"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
mimalloc = { version = "*", default-features = false }
clap = { version = "3", features = ["derive", "env"] }
strum = { version = "0.24", features = ["derive"] }

# Blob storage deps
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
scylla = "0.4.3"

moka = "0.8.0"
rayon = "1.5.1"
crc32fast = "1.3.2"
enum_dispatch = "0.3.8"
hashbrown = "0.12.0"
crossbeam = "0.8.1"
tracing = "0.1.30"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.8"
image = "0.24"
base64 = "0.13.0"
bytes = "1"
anyhow = "1"
serde_yaml = "0.8.23"
serde_json = "1"
async-trait = "0.1"
once_cell = "1.10.0"
futures = "0.3"
mime = "0.3.16"

[dev-dependencies]
poem = { version = "1.2", features = ["anyhow", "test"] }

# [profile.release]
# lto = "fat"
# codegen-units = 1
